# ai-grand-prix

./: .gitattributes  .gitignore  .gitmodules  ARCHITECTURE.md  README.md  justfile  pyproject.toml
assets/: gate.glb
context/: agp-spec-reference.md
scripts/: bf_cli_probe.py  build_betaflight.sh  configure_betaflight.py  fetch_betaflight.sh  install_elodin.sh  verify_takeoff.py
sim/: __init__.py  betaflight_bridge.py  camera.py  config.py  course.py  main.py  physics.py  sensors.py  visualization.py
solver/: README.md  __init__.py  api.py  baseline.py
tests/: test_baseline_solver.py  test_camera_shape.py  test_course.py  test_packets.py
